--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "jest --watchAll",
     "lint": "./node_modules/.bin/eslint . --ext .js,.jsx",
     "lint:fix": "./node_modules/.bin/eslint . --ext .js,.jsx --fix"
   },
@@ -15,15 +16,23 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
-    "vite": "^3.2.3"
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "vite": "^3.2.3",
+    "whatwg-fetch": "^3.6.2"
   }
 }
