--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gif-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,6 +21,7 @@
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/whatwg-fetch": "^0.0.33",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
